
# Version 6.3.4
 * Fire particle multiplier (you can finally reduce the lag from anything catching on fire)
 * The setting to auto remove reactors will now do so within 20 blocks of core to reflect changes to splash damage
 * Clicking the "core is under attack" warning at the top of the screen will move the camera to the core which is under attack
 * Updated to v125

# Version 6.3.3
 * Unit picker will now always send a success message
 * Segment obstacles now removed on death
 * Navigation will no longer attempt to strafe at "low" fps
 * No longer spamming logs with some random garbage

# Version 6.3.2
 * Unit trails removed, they broke mods apparently.
 * Navigation now works correctly when moving diagonally (it will actually move diagonally instead of on one axis at a time).
 * Fixed a rare crash
 * Made settings tables public, they should have been anyways and they were causing mods to break.

# Version 6.3.0/6.3.1
 * Fixed 4 UnitPicker bugs
 * Fixed build repo url
 * Reworked auto updater and client version to be more user friendly (no longer a clientVersion and clientBuild), older versions of the client will show the new version as "0" but that should fix itself as soon as you update
 * Hotkey to toggle block visibility (I)
 * Show changelog when client is first run as well as every time the changelog is edited
 * Cleaned up some code
 * Don't draw effects/particles if units or buildings are invisible, they are annoying
 * Finished actions rework, everything works which is nice

# Version 6.2
 * Updated to v124
 * Turret ranges now display differently based on whether or not they can hit you
 * Setting to show unit ranges when showing turret ranges
 * Parallaxes are now displayed as turrets and avoided when navigating
 * Turrets are now properly treated as disabled when they lack power/coolant if needed
 * Progress on actions overhaul