@@ -853,10 +853,10 @@ setting.weatheropacity.name = Weather Opacity
 setting.firescl.name = Fire Particle Count (Reduce to save fps)
 setting.disablemonofont.name = Disable Monospace Font Fully (Requires Restart)
 setting.minzoom.name = Minimum Zoom Cap
-setting.autoboost.name = Auto boost For Ground Units
+setting.autoboost.name = Auto Boost For Ground Units
 setting.showuserid.name = Display User IDs In Player List (Hold SHIFT and click to copy).
 setting.broadcastcoreattack.name = Send Core Under Attack Messages To Everyone
-setting.clearchatonleave.name = Clear Message History When Joining a New Game
+setting.clearchatonleave.name = Clear Message History When Joining A New Game
 setting.assumeunstrict.name = Assume Server Isn't In Strict Mode (Attempts to teleport when pathing, won't work on most servers).
 setting.updateurl.name = Update Repository
 setting.discordrpc.name = Discord Rich Presence
