@@ -4,6 +4,8 @@
  * Fire particle multiplier (you can finally reduce the lag from anything catching on fire)
  * The setting to auto remove reactors will now do so within 20 blocks of core to reflect changes to splash damage
  * Clicking the "core is under attack" warning at the top of the screen will move the camera to the core which is under attack
+ * Shift + Z to spectate last sent position (similar to !lookat with no args), double tap to navigate (like !go with no args)
+ * Shift + Z will navigate to cursor when placing a schem, pressing Z without shift will flip as usual
  * Updated to v125
 
 # Version 6.3.3
